test/files/neg/t0226.check
t0226.scala:5: error: not found: type A1
      (implicit _1: Foo[List[A1]], _2: Foo[A2]): Foo[Tuple2[List[A1], A2]] =
                                                                 ^
t0226.scala:5: error: not found: type A1
      (implicit _1: Foo[List[A1]], _2: Foo[A2]): Foo[Tuple2[List[A1], A2]] =
                             ^
t0226.scala:8: error: implicit error;
!I rep: Foo[((List[Char],Int),(Nil.type,Int))]
  foo(((List('b'), 3), (Nil, 4)))
     ^
3 errors
